# habits_manager

./: .env.example  .gitignore  README.md  docker-compose.yml  dump.rdb  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_schedule.py  0003_habit_last_sent.py  0004_alter_habit_schedule.py  0005_alter_habit_related_habit.py  0006_alter_habit_reward.py  0007_alter_habit_schedule.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py  0003_user_tg_invite_link_alter_user_chat_id.py
