[tool.poetry]
name = "habits-manager"
version = "0.1.0"
description = ""
authors = ["Maxim Donchuk <m.donchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
django-rest-framework = "^0.1.0"
django-environ = "^0.11.2"
celery = "^5.3.6"
drf-yasg = "^1.21.7"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
